--- a/doc/step-by-step.org
+++ b/doc/step-by-step.org
@@ -191,6 +191,16 @@ post.
 
 ** creating a new node
 
+
+commit 134d6aa65b8b7555a016c62d2616f342e8598739
+Author: Navya <ncanumalla@pivotal.io>
+Date:   Wed Sep 23 12:31:44 2015 -0700
+
+    Back end changes and test for new todo item; also small front end changes.
+
+    Button still needs styling.  An error is shown in the console on submit of edit, but not solved here.
+
+    [finishes #103828036 ]
 - first thought of new endpoint
   `/resources/new/{title}/{content}/{done}/` but rejected that as the
   new button will put us in an edit form
@@ -208,16 +218,52 @@ post.
   Also , this will allow for later c/ insert a new item that was added
   by another client. 
 
+- we found that angular is constantly rewriting the page, or at least
+  checking whether it should.  so we have a ng-repeat="item in
+  listofitems", where list of items is a json list of hashes with
+  items (returned to us by the server).  Simply adding to this list
+  will make the new item pop up, as the ng-repeat will be rerun as
+  soon as the itemlist is changed.  Our mock-up add-new-item function is 
+  :     $scope.plusbutton = function () { 
+  :		$scope.listofitems.push({"id": 6, "title": "new item", "content": "Hi", "done": "no"});        
+  :     }; 
+  This and the ng-include directive were all explored in this [[https://jsfiddle.net/fngmnmve/1/][fiddle]]
+  (which uses an older version of our page, so no edit button yet.)
+  We started the ng-include when we were still trying to add dynamic
+  content to the page with jquery/angular.element, but we left the
+  partial in as it makes the page prettier.
+
+*** resources used
+- nice example of ng-include, with template in a script tag
+  http://jsfiddle.net/mrajcok/mfha6/
+- this very short arcticle explains how to add dynamic content to
+  angular pages:  http://www.java2s.com/Tutorials/AngularJS/AngularJS_Example/Scope/Add_new_item_to_UL_list.htm
+
+
+
 *** things learned
  
 - note that ng-include expects a variable name as a src.  so if you
   know your template name you have to use 2 layers of 
   : <div ng-include src='"toBeIncluded.html"' ng-controller='ctrlA'></div>
   See [[http://stackoverflow.com/questions/13811948/different-ng-includes-on-the-same-page-how-to-send-different-variables-to-each/13812605#13812605][this SO Post]]
+- adding dynamic content to the html via jquery or jqueryLite works,
+  but the new html does not get interpreted by angular, ie {{var}}
+  stays like that and ng-include does not work.
+
+
+➜  springdo git:(master) ✗ git commit -m 'not final'
+[master 94830a7] not final
+ 6 files changed, 123 insertions(+), 54 deletions(-)
 
 
 
 
+** commit 4e04ba01f5b7f9cf0dbdb1c4e4ae107eee899b63
+Author: Navya <ncanumalla@pivotal.io>
+Date:   Wed Sep 23 13:55:06 2015 -0700
+
+    added a test for the save end point
 
 **  screenshots
 
@@ -282,3 +328,18 @@ iterable.iterator().forEachRemaining(result::add);
 - the third line maps the add function of the empty list to each item
   of the iterator.
 - voila
+
+** (not solved) to refresh static items / hotswap
+
+
+//    @Override
+//    public void addResourceHandlers(ResourceHandlerRegistry registry) {
+//        if (!registry.hasMappingForPattern("/**")) {
+//            registry.addResourceHandler("/**")
+//                    .addResourceLocations(
+//                            this.resourceProperties.getStaticLocations())
+//                    .setCachePeriod(0);
+//        }
+//        super.addResourceHandlers(registry);
+//
+//    }
