Added raw text of blogger template
outstanding issues:
- icon in front of user story
- nice formatting of video link
- internal links are rewritten by blogger, will require some javascript?

--- a/doc/publishing-notes.org
+++ b/doc/publishing-notes.org
@@ -49,3 +49,6 @@ tried this in the hope that it would create relative links.  it does but blogger
 ("tut" :components ("org-notes" "tut-static"))
 ))
 
+
+* things to do
+** TODO write js to fix internal links
